src/gdts.core.parser/src/gdts/core/parser/GDTSTaskParser.java
// $ANTLR 3.4 ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g 2011-09-20 15:37:50

  package gdts.core.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class GDTSTaskParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARROW", "BOOLEAN", "CLOSE_B", "CLOSE_S", "COLON", "COMMA", "COMMENT", "CONTAINERTYPE", "DIGIT", "DOT", "D_ALIAS", "D_BEGIN", "D_CALL", "D_ELSE", "D_END", "D_END_FLOW", "D_END_FOR", "D_END_IF", "D_END_IN", "D_END_MASTER", "D_END_MODULE", "D_END_MODULES", "D_END_OUT", "D_END_SLAVE", "D_END_SLAVETASK", "D_END_TASK", "D_END_VARS", "D_END_WHILE", "D_FLOW", "D_FOR", "D_IF", "D_IN", "D_INOUT", "D_MASTER", "D_MODULE", "D_MODULES", "D_NAME", "D_OUT", "D_SLAVES", "D_SLAVETASK", "D_TASK", "D_VARS", "D_VERSION", "D_WHILE", "FLOAT", "ID", "INTEGER", "LETTER", "LOWER_CASE", "ML_COMMENT", "NEWLINE", "NULL", "OF_OPER", "OPEN_B", "OPEN_S", "OPER_ASSIGN", "OPER_DEC", "OPER_EQ", "OPER_G", "OPER_GE", "OPER_INC", "OPER_L", "OPER_LE", "OPER_NEQ", "SEMI", "SIMPLETYPE", "STRING", "UNDERSCORE", "UPPER_CASE", "VALUE", "VERSION", "WS", "ARRAY_REF", "ASSIGNMENT", "COMMAND_CALL", "CONDITION", "DECREMENT", "FLOW_BLOCK", "FOR_ACTION", "FOR_INIT", "FOR_LOOP", "INCREMENT", "INDEX_BY_VALUE", "INDEX_BY_VAR", "MATRIX_REF", "MODULE", "MODULES", "MODULE_ALIAS", "MODULE_VERSION", "PARAM", "PARAMETERS", "SLAVETASK", "TASK", "TASK_DESCR", "TASK_FLOW", "TASK_INPUT", "TASK_OUTPUT", "TASK_VARS", "VAR", "WHILE_LOOP"
    };

    public static final int EOF=-1;
    public static final int ARROW=4;
    public static final int BOOLEAN=5;
    public static final int CLOSE_B=6;
    public static final int CLOSE_S=7;
    public static final int COLON=8;
    public static final int COMMA=9;
    public static final int COMMENT=10;
    public static final int CONTAINERTYPE=11;
    public static final int DIGIT=12;
    public static final int DOT=13;
    public static final int D_ALIAS=14;
    public static final int D_BEGIN=15;
    public static final int D_CALL=16;
    public static final int D_ELSE=17;
    public static final int D_END=18;
    public static final int D_END_FLOW=19;
    public static final int D_END_FOR=20;
    public static final int D_END_IF=21;
    public static final int D_END_IN=22;
    public static final int D_END_MASTER=23;
    public static final int D_END_MODULE=24;
    public static final int D_END_MODULES=25;
    public static final int D_END_OUT=26;
    public static final int D_END_SLAVE=27;
    public static final int D_END_SLAVETASK=28;
    public static final int D_END_TASK=29;
    public static final int D_END_VARS=30;
    public static final int D_END_WHILE=31;
    public static final int D_FLOW=32;
    public static final int D_FOR=33;
    public static final int D_IF=34;
    public static final int D_IN=35;
    public static final int D_INOUT=36;
    public static final int D_MASTER=37;
    public static final int D_MODULE=38;
    public static final int D_MODULES=39;
    public static final int D_NAME=40;
    public static final int D_OUT=41;
    public static final int D_SLAVES=42;
    public static final int D_SLAVETASK=43;
    public static final int D_TASK=44;
    public static final int D_VARS=45;
    public static final int D_VERSION=46;
    public static final int D_WHILE=47;
    public static final int FLOAT=48;
    public static final int ID=49;
    public static final int INTEGER=50;
    public static final int LETTER=51;
    public static final int LOWER_CASE=52;
    public static final int ML_COMMENT=53;
    public static final int NEWLINE=54;
    public static final int NULL=55;
    public static final int OF_OPER=56;
    public static final int OPEN_B=57;
    public static final int OPEN_S=58;
    public static final int OPER_ASSIGN=59;
    public static final int OPER_DEC=60;
    public static final int OPER_EQ=61;
    public static final int OPER_G=62;
    public static final int OPER_GE=63;
    public static final int OPER_INC=64;
    public static final int OPER_L=65;
    public static final int OPER_LE=66;
    public static final int OPER_NEQ=67;
    public static final int SEMI=68;
    public static final int SIMPLETYPE=69;
    public static final int STRING=70;
    public static final int UNDERSCORE=71;
    public static final int UPPER_CASE=72;
    public static final int VALUE=73;
    public static final int VERSION=74;
    public static final int WS=75;
    public static final int ARRAY_REF=76;
    public static final int ASSIGNMENT=77;
    public static final int COMMAND_CALL=78;
    public static final int CONDITION=79;
    public static final int DECREMENT=80;
    public static final int FLOW_BLOCK=81;
    public static final int FOR_ACTION=82;
    public static final int FOR_INIT=83;
    public static final int FOR_LOOP=84;
    public static final int INCREMENT=85;
    public static final int INDEX_BY_VALUE=86;
    public static final int INDEX_BY_VAR=87;
    public static final int MATRIX_REF=88;
    public static final int MODULE=89;
    public static final int MODULES=90;
    public static final int MODULE_ALIAS=91;
    public static final int MODULE_VERSION=92;
    public static final int PARAM=93;
    public static final int PARAMETERS=94;
    public static final int SLAVETASK=95;
    public static final int TASK=96;
    public static final int TASK_DESCR=97;
    public static final int TASK_FLOW=98;
    public static final int TASK_INPUT=99;
    public static final int TASK_OUTPUT=100;
    public static final int TASK_VARS=101;
    public static final int VAR=102;
    public static final int WHILE_LOOP=103;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GDTSTaskParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GDTSTaskParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[67+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return GDTSTaskParser.tokenNames; }
    public String getGrammarFileName() { return "..\\src\\gdts\\core\\parser\\GDTSTaskParser.g"; }


    public static class task_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "task"
    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:49:1: task : D_TASK ID ( COLON VERSION )? D_BEGIN ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* D_END SEMI -> ^( TASK ^( TASK_DESCR ID ( VERSION )? ) ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* ) ;
    public final GDTSTaskParser.task_return task() throws RecognitionException {
        GDTSTaskParser.task_return retval = new GDTSTaskParser.task_return();
        retval.start = input.LT(1);

        int task_StartIndex = input.index();

        CommonTree root_0 = null;

        Token D_TASK1=null;
        Token ID2=null;
        Token COLON3=null;
        Token VERSION4=null;
        Token D_BEGIN5=null;
        Token D_END12=null;
        Token SEMI13=null;
        GDTSTaskParser.modulesDescr_return modulesDescr6 =null;

        GDTSTaskParser.inputDataDescr_return inputDataDescr7 =null;

        GDTSTaskParser.outputDataDescr_return outputDataDescr8 =null;

        GDTSTaskParser.variables_return variables9 =null;

        GDTSTaskParser.flow_return flow10 =null;

        GDTSTaskParser.slavetask_return slavetask11 =null;


        CommonTree D_TASK1_tree=null;
        CommonTree ID2_tree=null;
        CommonTree COLON3_tree=null;
        CommonTree VERSION4_tree=null;
        CommonTree D_BEGIN5_tree=null;
        CommonTree D_END12_tree=null;
        CommonTree SEMI13_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_VERSION=new RewriteRuleTokenStream(adaptor,"token VERSION");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_D_TASK=new RewriteRuleTokenStream(adaptor,"token D_TASK");
        RewriteRuleTokenStream stream_D_BEGIN=new RewriteRuleTokenStream(adaptor,"token D_BEGIN");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleTokenStream stream_D_END=new RewriteRuleTokenStream(adaptor,"token D_END");
        RewriteRuleSubtreeStream stream_modulesDescr=new RewriteRuleSubtreeStream(adaptor,"rule modulesDescr");
        RewriteRuleSubtreeStream stream_slavetask=new RewriteRuleSubtreeStream(adaptor,"rule slavetask");
        RewriteRuleSubtreeStream stream_flow=new RewriteRuleSubtreeStream(adaptor,"rule flow");
        RewriteRuleSubtreeStream stream_outputDataDescr=new RewriteRuleSubtreeStream(adaptor,"rule outputDataDescr");
        RewriteRuleSubtreeStream stream_inputDataDescr=new RewriteRuleSubtreeStream(adaptor,"rule inputDataDescr");
        RewriteRuleSubtreeStream stream_variables=new RewriteRuleSubtreeStream(adaptor,"rule variables");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:49:6: ( D_TASK ID ( COLON VERSION )? D_BEGIN ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* D_END SEMI -> ^( TASK ^( TASK_DESCR ID ( VERSION )? ) ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* ) )
            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:49:8: D_TASK ID ( COLON VERSION )? D_BEGIN ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* D_END SEMI
            {
            D_TASK1=(Token)match(input,D_TASK,FOLLOW_D_TASK_in_task208); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_TASK.add(D_TASK1);


            ID2=(Token)match(input,ID,FOLLOW_ID_in_task210); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID2);


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:49:18: ( COLON VERSION )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==COLON) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:49:19: COLON VERSION
                    {
                    COLON3=(Token)match(input,COLON,FOLLOW_COLON_in_task213); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_COLON.add(COLON3);


                    VERSION4=(Token)match(input,VERSION,FOLLOW_VERSION_in_task215); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_VERSION.add(VERSION4);


                    }
                    break;

            }


            D_BEGIN5=(Token)match(input,D_BEGIN,FOLLOW_D_BEGIN_in_task219); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_BEGIN.add(D_BEGIN5);


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:50:3: ( modulesDescr )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==D_MODULES) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:50:3: modulesDescr
                    {
                    pushFollow(FOLLOW_modulesDescr_in_task223);
                    modulesDescr6=modulesDescr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_modulesDescr.add(modulesDescr6.getTree());

                    }
                    break;

            }


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:51:3: ( inputDataDescr )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==D_IN) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:51:3: inputDataDescr
                    {
                    pushFollow(FOLLOW_inputDataDescr_in_task228);
                    inputDataDescr7=inputDataDescr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_inputDataDescr.add(inputDataDescr7.getTree());

                    }
                    break;

            }


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:52:3: ( outputDataDescr )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==D_OUT) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:52:3: outputDataDescr
                    {
                    pushFollow(FOLLOW_outputDataDescr_in_task233);
                    outputDataDescr8=outputDataDescr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_outputDataDescr.add(outputDataDescr8.getTree());

                    }
                    break;

            }


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:53:3: ( variables )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==D_VARS) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:53:3: variables
                    {
                    pushFollow(FOLLOW_variables_in_task238);
                    variables9=variables();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_variables.add(variables9.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_flow_in_task243);
            flow10=flow();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_flow.add(flow10.getTree());

            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:55:3: ( slavetask )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==D_SLAVETASK) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:55:3: slavetask
            	    {
            	    pushFollow(FOLLOW_slavetask_in_task247);
            	    slavetask11=slavetask();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_slavetask.add(slavetask11.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            D_END12=(Token)match(input,D_END,FOLLOW_D_END_in_task252); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_END.add(D_END12);


            SEMI13=(Token)match(input,SEMI,FOLLOW_SEMI_in_task254); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SEMI.add(SEMI13);


            // AST REWRITE
            // elements: flow, inputDataDescr, modulesDescr, variables, ID, slavetask, outputDataDescr, VERSION
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 57:3: -> ^( TASK ^( TASK_DESCR ID ( VERSION )? ) ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* )
            {
                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:57:6: ^( TASK ^( TASK_DESCR ID ( VERSION )? ) ( modulesDescr )? ( inputDataDescr )? ( outputDataDescr )? ( variables )? flow ( slavetask )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(TASK, "TASK")
                , root_1);

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:58:4: ^( TASK_DESCR ID ( VERSION )? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(TASK_DESCR, "TASK_DESCR")
                , root_2);

                adaptor.addChild(root_2, 
                stream_ID.nextNode()
                );

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:58:20: ( VERSION )?
                if ( stream_VERSION.hasNext() ) {
                    adaptor.addChild(root_2, 
                    stream_VERSION.nextNode()
                    );

                }
                stream_VERSION.reset();

                adaptor.addChild(root_1, root_2);
                }

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:59:4: ( modulesDescr )?
                if ( stream_modulesDescr.hasNext() ) {
                    adaptor.addChild(root_1, stream_modulesDescr.nextTree());

                }
                stream_modulesDescr.reset();

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:60:4: ( inputDataDescr )?
                if ( stream_inputDataDescr.hasNext() ) {
                    adaptor.addChild(root_1, stream_inputDataDescr.nextTree());

                }
                stream_inputDataDescr.reset();

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:61:4: ( outputDataDescr )?
                if ( stream_outputDataDescr.hasNext() ) {
                    adaptor.addChild(root_1, stream_outputDataDescr.nextTree());

                }
                stream_outputDataDescr.reset();

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:62:4: ( variables )?
                if ( stream_variables.hasNext() ) {
                    adaptor.addChild(root_1, stream_variables.nextTree());

                }
                stream_variables.reset();

                adaptor.addChild(root_1, stream_flow.nextTree());

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:64:4: ( slavetask )*
                while ( stream_slavetask.hasNext() ) {
                    adaptor.addChild(root_1, stream_slavetask.nextTree());

                }
                stream_slavetask.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, task_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "task"


    public static class modulesDescr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "modulesDescr"
    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:67:1: modulesDescr : D_MODULES D_BEGIN ( singleModuleDescr )* D_END SEMI -> ^( MODULES ( singleModuleDescr )* ) ;
    public final GDTSTaskParser.modulesDescr_return modulesDescr() throws RecognitionException {
        GDTSTaskParser.modulesDescr_return retval = new GDTSTaskParser.modulesDescr_return();
        retval.start = input.LT(1);

        int modulesDescr_StartIndex = input.index();

        CommonTree root_0 = null;

        Token D_MODULES14=null;
        Token D_BEGIN15=null;
        Token D_END17=null;
        Token SEMI18=null;
        GDTSTaskParser.singleModuleDescr_return singleModuleDescr16 =null;


        CommonTree D_MODULES14_tree=null;
        CommonTree D_BEGIN15_tree=null;
        CommonTree D_END17_tree=null;
        CommonTree SEMI18_tree=null;
        RewriteRuleTokenStream stream_D_MODULES=new RewriteRuleTokenStream(adaptor,"token D_MODULES");
        RewriteRuleTokenStream stream_D_BEGIN=new RewriteRuleTokenStream(adaptor,"token D_BEGIN");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleTokenStream stream_D_END=new RewriteRuleTokenStream(adaptor,"token D_END");
        RewriteRuleSubtreeStream stream_singleModuleDescr=new RewriteRuleSubtreeStream(adaptor,"rule singleModuleDescr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:68:2: ( D_MODULES D_BEGIN ( singleModuleDescr )* D_END SEMI -> ^( MODULES ( singleModuleDescr )* ) )
            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:68:4: D_MODULES D_BEGIN ( singleModuleDescr )* D_END SEMI
            {
            D_MODULES14=(Token)match(input,D_MODULES,FOLLOW_D_MODULES_in_modulesDescr329); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_MODULES.add(D_MODULES14);


            D_BEGIN15=(Token)match(input,D_BEGIN,FOLLOW_D_BEGIN_in_modulesDescr331); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_BEGIN.add(D_BEGIN15);


            // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:69:3: ( singleModuleDescr )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==ID) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:69:3: singleModuleDescr
            	    {
            	    pushFollow(FOLLOW_singleModuleDescr_in_modulesDescr335);
            	    singleModuleDescr16=singleModuleDescr();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_singleModuleDescr.add(singleModuleDescr16.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            D_END17=(Token)match(input,D_END,FOLLOW_D_END_in_modulesDescr340); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_D_END.add(D_END17);


            SEMI18=(Token)match(input,SEMI,FOLLOW_SEMI_in_modulesDescr342); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SEMI.add(SEMI18);


            // AST REWRITE
            // elements: singleModuleDescr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 71:3: -> ^( MODULES ( singleModuleDescr )* )
            {
                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:71:6: ^( MODULES ( singleModuleDescr )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(MODULES, "MODULES")
                , root_1);

                // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:71:16: ( singleModuleDescr )*
                while ( stream_singleModuleDescr.hasNext() ) {
                    adaptor.addChild(root_1, stream_singleModuleDescr.nextTree());

                }
                stream_singleModuleDescr.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, modulesDescr_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "modulesDescr"


    public static class singleModuleDescr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "singleModuleDescr"
    // ..\\src\\gdts\\core\\parser\\GDTSTaskParser.g:74:1: singleModuleDescr : (moduleAlias= ID ARROW )? moduleName= ID ( COLON VERSION )? SEMI -> ^( MODULE $moduleName ^( MODULE_VERSION ( VERSION )? ) ^( MODULE_ALIAS ( $moduleAlias)? ) ) ;
    public final GDTSTaskParser.singleModuleDescr_return singleModuleDescr() throws RecognitionException {
        GDTSTaskParser.singleModuleDescr_return retval = new GDTSTaskParser.singleModuleDescr_return();
        retval.start = input.LT(1);

        int singleModuleDescr_StartIndex = input.index();

        CommonTree root_0 = null;

        Token moduleAlias=null;
        Token moduleName=null;
        Token ARROW19=null;
        Token COLON20=null;
        Token VERSION21=null;
        Token SEMI22=null;

        CommonTree moduleAlias_tree=null;
        CommonTree moduleName_tree=null;
        CommonTree ARROW19_tree=null;
        CommonTree COLON20_tree=null;
        CommonTree VERSION21_tree=null;
        CommonTree SEMI22_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_ARROW=new RewriteRuleTokenStream(adaptor,"token ARROW");
        RewriteRuleTokenStream stream_VERSION=new RewriteRuleTokenStream(adaptor,"token VERSION");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
